--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </div>
       <div class="col-sm-6 text-center">
         <h2>A bit about me:</h2>
-        <p class="lead">I'm majoring in Mathematical Economics at the University of Waterloo. I'm always looking for opportunities to grow and develop my skills. In my free time, I like to take online courses and currently I'm exploring the world of Data Science. I have experience in Pricing and Financial Analysis which I gained working as a co-op student. I have a long road ahead of me but I'm excited for whatever lies ahead.</p>
+        <p class="lead">I'm majoring in Mathematical Economics at the University of Waterloo. I'm always looking for opportunities to grow and develop my skills. In my free time, I like to take online courses and recently I'm exploring the world of Data Science. I have experience in Pricing and Financial Analysis which I gained working as a co-op student. I have a long road ahead of me but I'm excited for whatever lies ahead.</p>
       </div>
     </div>
 </div>
